--- a/index.html
+++ b/index.html
@@ -17,15 +17,17 @@
 <body>
   <div class="top-bar">
     <div class="top-bar-left">
-      <img class="top-bar-mini-logo fade-toggle hidden desktop" src="./assets/logos/Andrea-Faria-Marketing-Logo-White.svg" alt="Andréa Faria"
-        aria-hidden="true">
+      <img class="top-bar-mini-logo fade-toggle hidden desktop"
+        src="./assets/logos/Andrea-Faria-Marketing-Logo-White.svg" alt="Andréa Faria" aria-hidden="true">
       <h5>Pronto para construir uma marca desejada e memorável?</h5>
     </div>
     <div class="top-bar-right">
-      <button class="top-bar-hamburger fade-toggle hidden" aria-label="Open menu" aria-expanded="false" aria-controls="mobile-menu">
+      <button class="top-bar-hamburger fade-toggle hidden" aria-label="Open menu" aria-expanded="false"
+        aria-controls="mobile-menu">
         <span class="hamburger"></span>
       </button>
-      <a href="#about" class="btn btn-white desktop">Vamos Conversar</a>
+      <a href="https://wa.me/5521972452742?text=Ol%C3%A1%21%20Gostaria%20de%20agendar%20uma%20reuni%C3%A3o%20para%20saber%20como%20podemos%20fortalecer%20minha%20marca"
+        class="btn btn-white desktop" target="_blank">Vamos Conversar</a>
     </div>
   </div>
   <div class="top-bar-bottom hidden">
@@ -60,7 +62,7 @@
     </nav>
   </header>
 
-  <section class="hero">
+  <section id="hero" class="hero">
     <div class="overlay"></div>
     <div class="hero-content">
       <h1 class="desktop">Transformamos marcas em experiências vivas que inspiram, conectam e convertem.</h1>
@@ -71,7 +73,8 @@
         como o seu cliente percebe e deseja a sua marca.
       </p>
       <div class="hero-buttons">
-        <a href="#about" class="btn btn-white">Agendar Reunião</a>
+        <a href="https://wa.me/5521972452742?text=Ol%C3%A1%21%20Gostaria%20de%20agendar%20uma%20reuni%C3%A3o%20para%20saber%20como%20podemos%20fortalecer%20minha%20marca"
+          class="btn btn-white" target="_blank">Agendar Reunião</a>
         <!--span class="btn-divider"></span>
         <a href="#what" class="btn btn-purple">Ver Casos</a-->
       </div>
@@ -83,10 +86,11 @@
       Quando a marca vale mais, <br>
       o negócio cresce mais.
     </h1>
-    <a href="#about" class="btn btn-white">Agendar Reunião</a>
+    <a href="https://wa.me/5521972452742?text=Ol%C3%A1%21%20Gostaria%20de%20agendar%20uma%20reuni%C3%A3o%20para%20saber%20como%20podemos%20fortalecer%20minha%20marca"
+      class="btn btn-white" target="_blank">Agendar Reunião</a>
   </section>
 
-  <section class="servicos">
+  <section id="servicos" class="servicos">
     <h2>O que fazemos</h2>
 
     <div class="servicos-row desktop">
@@ -96,6 +100,8 @@
       <div class="servicos-row-right">
         <h5>AUDIOVISUAL</h5>
         <p>Conteúdos que elevam percepção e geram desejo.</p>
+        <a href="https://wa.me/5521972452742?text=Ol%C3%A1%2C%20Andr%C3%A9a%21%20Tenho%20interesse%20no%20servi%C3%A7o%20de%20Audiovisual.%20Gostaria%20de%20entender%20como%20podemos%20elevar%20a%20percep%C3%A7%C3%A3o%20da%20minha%20marca%20atrav%C3%A9s%20de%20conte%C3%BAdos%20visuais.%20Podemos%20conversar%3F"
+        class="btn btn-white desktop" target="_blank">Falar sobre Audiovisual</a>
       </div>
     </div>
 
@@ -103,6 +109,8 @@
       <div class="servicos-row-left">
         <h5>CRIAÇÃO DE MARCA</h5>
         <p>Identidades que diferenciam, posicionam e marcam.</p>
+        <a href="https://wa.me/5521972452742?text=Ol%C3%A1%2C%20Andr%C3%A9a%21%20Tenho%20interesse%20no%20servi%C3%A7o%20de%20Cria%C3%A7%C3%A3o%20de%20Marca.%20Gostaria%20de%20entender%20como%20podemos%20desenvolver%20uma%20identidade%20forte%2C%20desejada%20e%20estrat%C3%A9gica%20para%20o%20meu%20neg%C3%B3cio.%20Podemos%20conversar%3F"
+        class="btn btn-white desktop" target="_blank">Quero uma marca forte</a>
       </div>
       <div class="servicos-row-right">
         <img src="./assets/images/andrea-faria-criacao-de-marca.jpg" alt="">
@@ -116,6 +124,8 @@
       <div class="servicos-row-right">
         <h5>WEBSITE</h5>
         <p>Sites que impressionam, convertem e fortalecem a presença digital.</p>
+        <a href="https://wa.me/5521972452742?text=Ol%C3%A1%2C%20Andr%C3%A9a%21%20Tenho%20interesse%20no%20servi%C3%A7o%20de%20Cria%C3%A7%C3%A3o%20de%20Website.%20Gostaria%20de%20entender%20como%20podemos%20desenvolver%20um%20site%20moderno%2C%20estrat%C3%A9gico%20e%20preparado%20para%20converter%20visitantes%20em%20clientes.%20Podemos%20conversar%3F"
+        class="btn btn-white desktop" target="_blank">Criar meu Website</a>
       </div>
     </div>
 
@@ -123,6 +133,8 @@
       <div class="servicos-row-left">
         <h5>SOCIAL MEDIA</h5>
         <p>Estratégias que atraem, engajam e constroem autoridade.</p>
+        <a href="https://wa.me/5521972452742?text=Ol%C3%A1%2C%20Andr%C3%A9a%21%20Tenho%20interesse%20no%20servi%C3%A7o%20de%20Social%20Media.%20Gostaria%20de%20entender%20como%20podemos%20desenvolver%20uma%20estrat%C3%A9gia%20de%20conte%C3%BAdo%20que%20engaje%20meu%20p%C3%BAblico%20e%20aumente%20convers%C3%B5es%20para%20o%20meu%20neg%C3%B3cio.%20Podemos%20conversar%3F"
+        class="btn btn-white desktop" target="_blank">Quero Social Media</a>
       </div>
       <div class="servicos-row-right">
         <img src="./assets/images/andrea-faria-social-media.jpg" alt="">
@@ -136,6 +148,8 @@
       <div class="servicos-row-right">
         <h5>MARKETING DE PERFORMANCE</h5>
         <p>Campanhas que alcançam as pessoas certas e geram rentabilidade.</p>
+        <a href="https://wa.me/5521972452742?text=Ol%C3%A1%2C%20Andr%C3%A9a%21%20Tenho%20interesse%20no%20servi%C3%A7o%20de%20Marketing%20de%20Performance.%20Gostaria%20de%20entender%20como%20podemos%20criar%20estrat%C3%A9gias%20orientadas%20a%20dados%20para%20aumentar%20resultados%2C%20otimizar%20investimentos%20e%20acelerar%20o%20crescimento%20do%20meu%20neg%C3%B3cio.%20Podemos%20conversar%3F"
+        class="btn btn-white desktop" target="_blank">Quero Mais Performance</a>
       </div>
     </div>
 
@@ -143,6 +157,8 @@
       <div class="servicos-row-left">
         <h5>CONSULTORIA DE MARKETING & NEGÓCIOS</h5>
         <p>Direção estratégica para crescer com clareza e consistência.</p>
+        <a href="https://wa.me/5521972452742?text=Ol%C3%A1%2C%20Andr%C3%A9a%21%20Tenho%20interesse%20no%20servi%C3%A7o%20de%20Consultoria%20de%20Marketing%20%26%20Neg%C3%B3cios.%20Gostaria%20de%20entender%20como%20podemos%20analisar%20meu%20cen%C3%A1rio%20atual%2C%20identificar%20oportunidades%20e%20desenv"
+        class="btn btn-white desktop" target="_blank">Falar sobre Consultoria</a>
       </div>
       <div class="servicos-row-right">
         <img src="./assets/images/andrea-faria-consultoria.jpg" alt="">
@@ -154,6 +170,8 @@
       <div class="servicos-row-left">
         <h5>AUDIOVISUAL</h5>
         <p>Conteúdos que elevam percepção e geram desejo.</p>
+        <a href="https://wa.me/5521972452742?text=Ol%C3%A1%2C%20Andr%C3%A9a%21%20Tenho%20interesse%20no%20servi%C3%A7o%20de%20Audiovisual.%20Gostaria%20de%20entender%20como%20podemos%20elevar%20a%20percep%C3%A7%C3%A3o%20da%20minha%20marca%20atrav%C3%A9s%20de%20conte%C3%BAdos%20visuais.%20Podemos%20conversar%3F"
+        class="btn btn-white desktop" target="_blank">Falar sobre Audiovisual</a>
       </div>
       <div class="servicos-row-right">
         <img src="./assets/images/andrea-faria-audio-visual.jpg" alt="">
@@ -165,6 +183,8 @@
       <div class="servicos-row-left">
         <h5>CRIAÇÃO DE MARCA</h5>
         <p>Identidades que diferenciam, posicionam e marcam.</p>
+        <a href="https://wa.me/5521972452742?text=Ol%C3%A1%2C%20Andr%C3%A9a%21%20Tenho%20interesse%20no%20servi%C3%A7o%20de%20Cria%C3%A7%C3%A3o%20de%20Marca.%20Gostaria%20de%20entender%20como%20podemos%20desenvolver%20uma%20identidade%20forte%2C%20desejada%20e%20estrat%C3%A9gica%20para%20o%20meu%20neg%C3%B3cio.%20Podemos%20conversar%3F"
+        class="btn btn-white desktop" target="_blank">Quero uma marca forte</a>
       </div>
       <div class="servicos-row-right">
         <img src="./assets/images/andrea-faria-criacao-de-marca.jpg" alt="">
@@ -176,6 +196,8 @@
       <div class="servicos-row-left">
         <h5>WEBSITE</h5>
         <p>Sites que impressionam, convertem e fortalecem a presença digital.</p>
+        <a href="https://wa.me/5521972452742?text=Ol%C3%A1%2C%20Andr%C3%A9a%21%20Tenho%20interesse%20no%20servi%C3%A7o%20de%20Cria%C3%A7%C3%A3o%20de%20Website.%20Gostaria%20de%20entender%20como%20podemos%20desenvolver%20um%20site%20moderno%2C%20estrat%C3%A9gico%20e%20preparado%20para%20converter%20visitantes%20em%20clientes.%20Podemos%20conversar%3F"
+        class="btn btn-white desktop" target="_blank">Criar meu Website</a>
       </div>
       <div class="servicos-row-right">
         <img src="./assets/images/andrea-faria-web-design.jpg" alt="">
@@ -187,6 +209,8 @@
       <div class="servicos-row-left">
         <h5>SOCIAL MEDIA</h5>
         <p>Estratégias que atraem, engajam e constroem autoridade.</p>
+        <a href="https://wa.me/5521972452742?text=Ol%C3%A1%2C%20Andr%C3%A9a%21%20Tenho%20interesse%20no%20servi%C3%A7o%20de%20Social%20Media.%20Gostaria%20de%20entender%20como%20podemos%20desenvolver%20uma%20estrat%C3%A9gia%20de%20conte%C3%BAdo%20que%20engaje%20meu%20p%C3%BAblico%20e%20aumente%20convers%C3%B5es%20para%20o%20meu%20neg%C3%B3cio.%20Podemos%20conversar%3F"
+        class="btn btn-white desktop" target="_blank">Quero Social Media</a>
       </div>
       <div class="servicos-row-right">
         <img src="./assets/images/andrea-faria-social-media.jpg" alt="">
@@ -198,6 +222,8 @@
       <div class="servicos-row-left">
         <h5>MARKETING DE PERFORMANCE</h5>
         <p>Campanhas que alcançam as pessoas certas e geram rentabilidade.</p>
+        <a href="https://wa.me/5521972452742?text=Ol%C3%A1%2C%20Andr%C3%A9a%21%20Tenho%20interesse%20no%20servi%C3%A7o%20de%20Marketing%20de%20Performance.%20Gostaria%20de%20entender%20como%20podemos%20criar%20estrat%C3%A9gias%20orientadas%20a%20dados%20para%20aumentar%20resultados%2C%20otimizar%20investimentos%20e%20acelerar%20o%20crescimento%20do%20meu%20neg%C3%B3cio.%20Podemos%20conversar%3F"
+        class="btn btn-white desktop" target="_blank">Quero Mais Performance</a>
       </div>
       <div class="servicos-row-right">
         <img src="./assets/images/andrea-faria-marketing-de-performance.jpg" alt="">
@@ -209,6 +235,8 @@
       <div class="servicos-row-left">
         <h5>CONSULTORIA DE MARKETING & NEGÓCIOS</h5>
         <p>Direção estratégica para crescer com clareza e consistência.</p>
+        <a href="https://wa.me/5521972452742?text=Ol%C3%A1%2C%20Andr%C3%A9a%21%20Tenho%20interesse%20no%20servi%C3%A7o%20de%20Consultoria%20de%20Marketing%20%26%20Neg%C3%B3cios.%20Gostaria%20de%20entender%20como%20podemos%20analisar%20meu%20cen%C3%A1rio%20atual%2C%20identificar%20oportunidades%20e%20desenv"
+        class="btn btn-white desktop" target="_blank">Falar sobre Consultoria</a>
       </div>
       <div class="servicos-row-right">
         <img src="./assets/images/andrea-faria-consultoria.jpg" alt="">
@@ -223,12 +251,13 @@
       </div>
 
       <div class="servicos-cta-right">
-        <a href="#about" class="btn btn-white">Conheça Nosso Processo</a>
+        <a href="https://wa.me/5521972452742?text=Ol%C3%A1%21%20Gostaria%20de%20agendar%20uma%20reuni%C3%A3o%20para%20saber%20como%20podemos%20fortalecer%20minha%20marca"
+          class="btn btn-white" target="_blank">Conheça Nosso Processo</a>
       </div>
     </div>
   </section>
 
-  <section id="our-clients" class="our-clients-section">
+  <section id="clientes" class="our-clients-section">
     <div class="our-clients-container">
       <h5>Our Clients</h5>
       <h2 class="desktop">Escolhida por marcas que valorizam experiência, estética e estratégia.</h2>
@@ -345,58 +374,6 @@
             <img src="./assets/clients/angsana-bangalore.jpg" alt="Angsana Bangalore Logo">
           </div>
         </div>
-
-        <div class="clients-track clients-track-3" aria-hidden="false">
-          <div class="client-logo-container">
-            <img src="./assets/clients/roxie-bangalore.jpg" alt="Roxie Bangalore Logo">
-          </div>
-          <div class="client-logo-container">
-            <img src="./assets/clients/metiers-cafe.jpg" alt="Metiers Café Logo">
-          </div>
-          <div class="client-logo-container">
-            <img src="./assets/clients/casa-do-arroz.jpg" alt="Casa do Arroz Logo">
-          </div>
-          <div class="client-logo-container">
-            <img src="./assets/clients/frutos.jpg" alt="Frutos Logo">
-          </div>
-          <div class="client-logo-container">
-            <img src="./assets/clients/com-cafe.jpg" alt="Com Café Logo">
-          </div>
-          <div class="client-logo-container">
-            <img src="./assets/clients/lazy-suzy.jpg" alt="Lazy Suzy Logo">
-          </div>
-          <div class="client-logo-container">
-            <img src="./assets/clients/loya.jpg" alt="Loya Logo">
-          </div>
-          <div class="client-logo-container">
-            <img src="./assets/clients/seta.jpg" alt="Seta Logo">
-          </div>
-          <!-- duplicated for seamless loop -->
-          <div class="client-logo-container">
-            <img src="./assets/clients/roxie-bangalore.jpg" alt="Roxie Bangalore Logo">
-          </div>
-          <div class="client-logo-container">
-            <img src="./assets/clients/metiers-cafe.jpg" alt="Metiers Café Logo">
-          </div>
-          <div class="client-logo-container">
-            <img src="./assets/clients/casa-do-arroz.jpg" alt="Casa do Arroz Logo">
-          </div>
-          <div class="client-logo-container">
-            <img src="./assets/clients/frutos.jpg" alt="Frutos Logo">
-          </div>
-          <div class="client-logo-container">
-            <img src="./assets/clients/com-cafe.jpg" alt="Com Café Logo">
-          </div>
-          <div class="client-logo-container">
-            <img src="./assets/clients/lazy-suzy.jpg" alt="Lazy Suzy Logo">
-          </div>
-          <div class="client-logo-container">
-            <img src="./assets/clients/loya.jpg" alt="Loya Logo">
-          </div>
-          <div class="client-logo-container">
-            <img src="./assets/clients/seta.jpg" alt="Seta Logo">
-          </div>
-        </div>
       </div>
     </div>
 
@@ -404,7 +381,8 @@
       <h3>De marcas globais a negócios autorais. <br><br> Nosso trabalho começa pelo mesmo ponto: <strong>aumentar
           valor, visibilidade e
           desejo.</strong></h3>
-      <a href="#about" class="btn btn-dark-purple">Vamos Conversar</a>
+      <a href="https://wa.me/5521972452742?text=Ol%C3%A1%21%20Gostaria%20de%20agendar%20uma%20reuni%C3%A3o%20para%20saber%20como%20podemos%20fortalecer%20minha%20marca"
+        class="btn btn-dark-purple" target="_blank">Vamos Conversar</a>
     </div>
   </section>
 
@@ -426,21 +404,22 @@
         <h2>Vamos conversar sobre o próximo passo da sua marca?</h2>
 
         <div class="footer-cta">
-          <a href="https://wa.me/5521972452742" class="btn btn-primary" target="_blank">
+          <a href="https://wa.me/5521972452742?text=Ol%C3%A1%21%20Gostaria%20de%20agendar%20uma%20reuni%C3%A3o%20para%20saber%20como%20podemos%20fortalecer%20minha%20marca"
+            class="btn btn-primary" target="_blank">
             Fale com a Andréa
           </a>
         </div>
       </div>
 
       <div class="footer-socials">
-        <a href="mailto:andrea@andreafariamkt.com">Email</a>
-        <a href="https://instagram.com" target="_blank" aria-label="Instagram">
+        <a href="mailto:andrea@andrefariamkt.com">Email</a>
+        <a href="https://www.instagram.com/andreafaria.marketing/" target="_blank" aria-label="Instagram">
           Instagram
         </a>
-        <a href="https://youtube.com" target="_blank" aria-label="YouTube">
+        <!--a href="https://youtube.com" target="_blank" aria-label="YouTube">
           YouTube
-        </a>
-        <a href="https://linkedin.com" target="_blank" aria-label="LinkedIn">
+        </a-->
+        <a href="https://www.linkedin.com/company/andreafariamarketing/" target="_blank" aria-label="LinkedIn">
           LinkedIn
         </a>
       </div>
