--- a/index.html
+++ b/index.html
@@ -1,24 +1,36 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="pt-BR">
 
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Andréa Faria Marketing</title>
-  <link rel="icon" type="image/x-icon" href="./assets/favicon/favicon-32x32.png">
+  <meta name="description" content="Especialista em branding, criação de marcas, audiovisual, social media e websites. Transformamos negócios em marcas desejadas, estratégicas e com alto valor percebido.">
+
+  <title>Branding, Audiovisual & Marketing Estratégico | Andréa Faria Marketing</title>
+
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon/favicon-16x16.png">
+
   <link rel="stylesheet" href="css/style.css" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet">
+
+  <meta property="og:title" content="Andréa Faria Marketing — Branding, Marketing e Audiovisual">
+  <meta property="og:description" content="Construímos marcas desejadas, estratégicas e memoráveis.">
+  <meta property="og:image" content="https://andreafariamkt.com/assets/images/andrea-faria-destaque.webp">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://andreafariamkt.com">
 </head>
 
 <body>
   <div class="top-bar">
     <div class="top-bar-left">
       <img class="top-bar-mini-logo fade-toggle hidden desktop"
-        src="./assets/logos/Andrea-Faria-Marketing-Logo-White.svg" alt="Andréa Faria" aria-hidden="true">
+        src="./assets/logos/Andrea-Faria-Marketing-Logo-White.svg" alt="Andréa Faria" aria-hidden="true" loading="lazy">
       <h5>Pronto para construir uma marca desejada e memorável?</h5>
     </div>
     <div class="top-bar-right">
@@ -37,27 +49,25 @@
         <li><a href="#hero">Home</a></li>
         <li><a href="#servicos">O que fazemos</a></li>
         <li><a href="#clientes">Clientes</a></li>
-        <!--li><a href="#blog">AF Notes</a></li-->
-        <!--li><a href="#contato">Contato</a></li-->
+        <li><a href="#contato">Contato</a></li>
       </ul>
     </nav>
   </div>
 
   <header class="desktop">
     <div class="logo">
-      <img src="assets/logos/Andrea-Faria-Marketing-Logo-Tipo-White.svg" alt="Andréa Faria Logo" height="40">
+      <img src="assets/logos/Andrea-Faria-Marketing-Logo-Tipo-White.svg" alt="Andréa Faria Logo" height="40" loading="lazy">
     </div>
     <div>
       <img src="assets/logos/Andrea-Faria-Marketing-Logo-White.svg" alt="Andréa Faria Marketing - Design - Áudio Visual"
-        height="25">
+        height="25" loading="lazy">
     </div>
     <nav>
       <ul>
         <li><a href="#hero">Home</a></li>
         <li><a href="#servicos">O que fazemos</a></li>
         <li><a href="#clientes">Clientes</a></li>
-        <!--li><a href="#blog">AF Notes</a></li-->
-        <!--li><a href="#contato">Contato</a></li-->
+        <li><a href="#contato">Contato</a></li>
       </ul>
     </nav>
   </header>
@@ -66,11 +76,10 @@
     <div class="overlay"></div>
     <div class="hero-content">
       <h1 class="desktop">Transformamos marcas em experiências vivas que inspiram, conectam e convertem.</h1>
-      <h1 class="mobile">Transformamos sua marca!</h1>
+      <h1 class="mobile" aria-hidden="true">Transformamos sua marca!</h1>
       <p class="description">
-        Há mais de 10 anos unimos branding artesanal, estética refinada e marketing estratégico. <br><br> Nós
-        transformar a forma
-        como o seu cliente percebe e deseja a sua marca.
+        Há mais de 10 anos unimos branding artesanal, estética refinada e marketing estratégico. <br><br> 
+        Nós transformamos a forma como o seu cliente percebe e deseja a sua marca
       </p>
       <div class="hero-buttons">
         <a href="https://wa.me/5521972452742?text=Ol%C3%A1%21%20Gostaria%20de%20agendar%20uma%20reuni%C3%A3o%20para%20saber%20como%20podemos%20fortalecer%20minha%20marca"
@@ -95,7 +104,7 @@
 
     <div class="servicos-row desktop">
       <div class="servicos-row-left">
-        <img src="./assets/images/andrea-faria-audio-visual.jpg" alt="">
+        <img src="./assets/images/andrea-faria-audio-visual.webp" alt="Produção audiovisual por Andréa Faria Marketing" loading="lazy">
       </div>
       <div class="servicos-row-right">
         <h5>AUDIOVISUAL</h5>
@@ -113,13 +122,13 @@
         class="btn btn-white desktop" target="_blank">Quero uma marca forte</a>
       </div>
       <div class="servicos-row-right">
-        <img src="./assets/images/andrea-faria-criacao-de-marca.jpg" alt="">
+        <img src="./assets/images/andrea-faria-criacao-de-marca.webp" alt="Identidade visual desenvolvida por Andréa Faria Marketing" loading="lazy">
       </div>
     </div>
 
     <div class="servicos-row desktop">
       <div class="servicos-row-left">
-        <img src="./assets/images/andrea-faria-web-design.jpg" alt="">
+        <img src="./assets/images/andrea-faria-web-design.webp" alt="Projeto de website criado pela Andréa Faria Marketing" loading="lazy">
       </div>
       <div class="servicos-row-right">
         <h5>WEBSITE</h5>
@@ -137,13 +146,13 @@
         class="btn btn-white desktop" target="_blank">Quero Social Media</a>
       </div>
       <div class="servicos-row-right">
-        <img src="./assets/images/andrea-faria-social-media.jpg" alt="">
+        <img src="./assets/images/andrea-faria-social-media.webp" alt="Gestão de redes sociais pela Andréa Faria Marketing"  loading="lazy">
       </div>
     </div>
 
     <div class="servicos-row desktop">
       <div class="servicos-row-left">
-        <img src="./assets/images/andrea-faria-marketing-de-performance.jpg" alt="">
+        <img src="./assets/images/andrea-faria-marketing-de-performance.webp" alt="Marketing de performance realizado pela Andréa Faria Marketing" loading="lazy">
       </div>
       <div class="servicos-row-right">
         <h5>MARKETING DE PERFORMANCE</h5>
@@ -161,7 +170,7 @@
         class="btn btn-white desktop" target="_blank">Falar sobre Consultoria</a>
       </div>
       <div class="servicos-row-right">
-        <img src="./assets/images/andrea-faria-consultoria.jpg" alt="">
+        <img src="./assets/images/andrea-faria-consultoria.webp" alt="Consultoria estratégica de marketing e negócios por Andréa Faria Marketing" loading="lazy">
       </div>
     </div>
 
@@ -174,7 +183,7 @@
         class="btn btn-white desktop" target="_blank">Falar sobre Audiovisual</a>
       </div>
       <div class="servicos-row-right">
-        <img src="./assets/images/andrea-faria-audio-visual.jpg" alt="">
+        <img src="./assets/images/andrea-faria-audio-visual.webp" alt="Produção audiovisual por Andréa Faria Marketing" loading="lazy">
       </div>
     </div>
 
@@ -187,7 +196,7 @@
         class="btn btn-white desktop" target="_blank">Quero uma marca forte</a>
       </div>
       <div class="servicos-row-right">
-        <img src="./assets/images/andrea-faria-criacao-de-marca.jpg" alt="">
+        <img src="./assets/images/andrea-faria-criacao-de-marca.webp" alt="Identidade visual desenvolvida por Andréa Faria Marketing" loading="lazy">
       </div>
     </div>
 
@@ -200,7 +209,7 @@
         class="btn btn-white desktop" target="_blank">Criar meu Website</a>
       </div>
       <div class="servicos-row-right">
-        <img src="./assets/images/andrea-faria-web-design.jpg" alt="">
+        <img src="./assets/images/andrea-faria-web-design.webp" alt="Projeto de website criado pela Andréa Faria Marketing" loading="lazy">
       </div>
     </div>
 
@@ -213,7 +222,7 @@
         class="btn btn-white desktop" target="_blank">Quero Social Media</a>
       </div>
       <div class="servicos-row-right">
-        <img src="./assets/images/andrea-faria-social-media.jpg" alt="">
+        <img src="./assets/images/andrea-faria-social-media.webp" alt="Gestão de redes sociais pela Andréa Faria Marketing" loading="lazy">
       </div>
     </div>
 
@@ -226,7 +235,7 @@
         class="btn btn-white desktop" target="_blank">Quero Mais Performance</a>
       </div>
       <div class="servicos-row-right">
-        <img src="./assets/images/andrea-faria-marketing-de-performance.jpg" alt="">
+        <img src="./assets/images/andrea-faria-marketing-de-performance.webp" alt="Marketing de performance realizado pela Andréa Faria Marketing" loading="lazy">
       </div>
     </div>
 
@@ -239,7 +248,7 @@
         class="btn btn-white desktop" target="_blank">Falar sobre Consultoria</a>
       </div>
       <div class="servicos-row-right">
-        <img src="./assets/images/andrea-faria-consultoria.jpg" alt="">
+        <img src="./assets/images/andrea-faria-consultoria.webp" alt="Consultoria estratégica de marketing e negócios por Andréa Faria Marketing" loading="lazy">
       </div>
     </div>
 
@@ -267,111 +276,111 @@
       <div class="clients-carousel" aria-hidden="false">
         <div class="clients-track clients-track-1" aria-hidden="false">
           <div class="client-logo-container">
-            <img src="./assets/clients/metiers-cafe.jpg" alt="Metiers Café Logo">
+            <img src="./assets/clients/metiers-cafe.jpg" alt="Metiers Café Logo" loading="lazy">
           </div>
           <div class="client-logo-container">
-            <img src="./assets/clients/casa-do-arroz.jpg" alt="Casa do Arroz Logo">
+            <img src="./assets/clients/casa-do-arroz.jpg" alt="Casa do Arroz Logo" loading="lazy">
           </div>
           <div class="client-logo-container">
-            <img src="./assets/clients/frutos.jpg" alt="Frutos Logo">
+            <img src="./assets/clients/frutos.jpg" alt="Frutos Logo" loading="lazy">
           </div>
           <div class="client-logo-container">
-            <img src="./assets/clients/com-cafe.jpg" alt="Com Café Logo">
+            <img src="./assets/clients/com-cafe.jpg" alt="Com Café Logo" loading="lazy">
           </div>
           <div class="client-logo-container">
-            <img src="./assets/clients/lazy-suzy.jpg" alt="Lazy Suzy Logo">
+            <img src="./assets/clients/lazy-suzy.jpg" alt="Lazy Suzy Logo" loading="lazy">
           </div>
           <div class="client-logo-container">
-            <img src="./assets/clients/loya.jpg" alt="Loya Logo">
+            <img src="./assets/clients/loya.jpg" alt="Loya Logo" loading="lazy">
           </div>
           <div class="client-logo-container">
-            <img src="./assets/clients/seta.jpg" alt="Seta Logo">
+            <img src="./assets/clients/seta.jpg" alt="Seta Logo" loading="lazy">
           </div>
           <div class="client-logo-container">
-            <img src="./assets/clients/hilton-bangalore.jpg" alt="Hilton Bangalore Logo">
+            <img src="./assets/clients/hilton-bangalore.jpg" alt="Hilton Bangalore Logo" loading="lazy">
           </div>
           <div class="client-logo-container">
-            <img src="./assets/clients/sheraton-bangalore.jpg" alt="Sheraton Bangalore Logo">
+            <img src="./assets/clients/sheraton-bangalore.jpg" alt="Sheraton Bangalore Logo" loading="lazy">
           </div>
           <!-- duplicated for seamless loop -->
           <div class="client-logo-container">
-            <img src="./assets/clients/metiers-cafe.jpg" alt="Metiers Café Logo">
+            <img src="./assets/clients/metiers-cafe.jpg" alt="Metiers Café Logo" loading="lazy">
           </div>
           <div class="client-logo-container">
-            <img src="./assets/clients/casa-do-arroz.jpg" alt="Casa do Arroz Logo">
+            <img src="./assets/clients/casa-do-arroz.jpg" alt="Casa do Arroz Logo" loading="lazy">
           </div>
           <div class="client-logo-container">
-            <img src="./assets/clients/frutos.jpg" alt="Frutos Logo">
+            <img src="./assets/clients/frutos.jpg" alt="Frutos Logo" loading="lazy">
           </div>
           <div class="client-logo-container">
-            <img src="./assets/clients/com-cafe.jpg" alt="Com Café Logo">
+            <img src="./assets/clients/com-cafe.jpg" alt="Com Café Logo" loading="lazy">
           </div>
           <div class="client-logo-container">
-            <img src="./assets/clients/lazy-suzy.jpg" alt="Lazy Suzy Logo">
+            <img src="./assets/clients/lazy-suzy.jpg" alt="Lazy Suzy Logo" loading="lazy">
           </div>
           <div class="client-logo-container">
-            <img src="./assets/clients/loya.jpg" alt="Loya Logo">
+            <img src="./assets/clients/loya.jpg" alt="Loya Logo" loading="lazy">
           </div>
           <div class="client-logo-container">
-            <img src="./assets/clients/seta.jpg" alt="Seta Logo">
+            <img src="./assets/clients/seta.jpg" alt="Seta Logo" loading="lazy">
           </div>
           <div class="client-logo-container">
-            <img src="./assets/clients/hilton-bangalore.jpg" alt="Hilton Bangalore Logo">
+            <img src="./assets/clients/hilton-bangalore.jpg" alt="Hilton Bangalore Logo" loading="lazy">
           </div>
           <div class="client-logo-container">
-            <img src="./assets/clients/sheraton-bangalore.jpg" alt="Sheraton Bangalore Logo">
+            <img src="./assets/clients/sheraton-bangalore.jpg" alt="Sheraton Bangalore Logo" loading="lazy">
           </div>
         </div>
 
         <div class="clients-track clients-track-2" aria-hidden="false">
           <div class="client-logo-container">
-            <img src="./assets/clients/the-campster.jpg" alt="The Campster Logo">
+            <img src="./assets/clients/the-campster.jpg" alt="The Campster Logo" loading="lazy">
           </div>
           <div class="client-logo-container">
-            <img src="./assets/clients/clover-asoke.jpg" alt="Clover Asoke Logo">
+            <img src="./assets/clients/clover-asoke.jpg" alt="Clover Asoke Logo" loading="lazy">
           </div>
           <div class="client-logo-container">
-            <img src="./assets/clients/the-rose-goa.jpg" alt="The Rose Goa Logo">
+            <img src="./assets/clients/the-rose-goa.jpg" alt="The Rose Goa Logo" loading="lazy">
           </div>
           <div class="client-logo-container">
-            <img src="./assets/clients/nasi-and-me.jpg" alt="Nasi and Me Logo">
+            <img src="./assets/clients/nasi-and-me.jpg" alt="Nasi and Me Logo" loading="lazy">
           </div>
           <div class="client-logo-container">
-            <img src="./assets/clients/byg-brewski.jpg" alt="Byg Brewski Logo">
+            <img src="./assets/clients/byg-brewski.jpg" alt="Byg Brewski Logo" loading="lazy">
           </div>
           <div class="client-logo-container">
-            <img src="./assets/clients/golden-circle.jpg" alt="Golden Circle Logo">
+            <img src="./assets/clients/golden-circle.jpg" alt="Golden Circle Logo" loading="lazy">
           </div>
           <div class="client-logo-container">
-            <img src="./assets/clients/horizon-bangalore.jpg" alt="Horizon Bangalore Logo">
+            <img src="./assets/clients/horizon-bangalore.jpg" alt="Horizon Bangalore Logo" loading="lazy">
           </div>
           <div class="client-logo-container">
-            <img src="./assets/clients/angsana-bangalore.jpg" alt="Angsana Bangalore Logo">
+            <img src="./assets/clients/angsana-bangalore.jpg" alt="Angsana Bangalore Logo" loading="lazy">
           </div>
           <!-- duplicated for seamless loop -->
           <div class="client-logo-container">
-            <img src="./assets/clients/the-campster.jpg" alt="The Campster Logo">
+            <img src="./assets/clients/the-campster.jpg" alt="The Campster Logo" loading="lazy">
           </div>
           <div class="client-logo-container">
-            <img src="./assets/clients/clover-asoke.jpg" alt="Clover Asoke Logo">
+            <img src="./assets/clients/clover-asoke.jpg" alt="Clover Asoke Logo" loading="lazy">
           </div>
           <div class="client-logo-container">
-            <img src="./assets/clients/the-rose-goa.jpg" alt="The Rose Goa Logo">
+            <img src="./assets/clients/the-rose-goa.jpg" alt="The Rose Goa Logo" loading="lazy">
           </div>
           <div class="client-logo-container">
-            <img src="./assets/clients/nasi-and-me.jpg" alt="Nasi and Me Logo">
+            <img src="./assets/clients/nasi-and-me.jpg" alt="Nasi and Me Logo" loading="lazy">
           </div>
           <div class="client-logo-container">
-            <img src="./assets/clients/byg-brewski.jpg" alt="Byg Brewski Logo">
+            <img src="./assets/clients/byg-brewski.jpg" alt="Byg Brewski Logo" loading="lazy">
           </div>
           <div class="client-logo-container">
-            <img src="./assets/clients/golden-circle.jpg" alt="Golden Circle Logo">
+            <img src="./assets/clients/golden-circle.jpg" alt="Golden Circle Logo" loading="lazy">
           </div>
           <div class="client-logo-container">
-            <img src="./assets/clients/horizon-bangalore.jpg" alt="Horizon Bangalore Logo">
+            <img src="./assets/clients/horizon-bangalore.jpg" alt="Horizon Bangalore Logo" loading="lazy">
           </div>
           <div class="client-logo-container">
-            <img src="./assets/clients/angsana-bangalore.jpg" alt="Angsana Bangalore Logo">
+            <img src="./assets/clients/angsana-bangalore.jpg" alt="Angsana Bangalore Logo" loading="lazy">
           </div>
         </div>
       </div>
@@ -398,7 +407,7 @@
     </div>
   </section>
 
-  <footer class="footer">
+  <footer id="contato" class="footer">
     <div class="footer-content">
       <div class="footer-cta">
         <h2>Vamos conversar sobre o próximo passo da sua marca?</h2>
@@ -436,6 +445,20 @@
   </footer>
 
   <script src="js/script.js"></script>
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org/",
+    "@type": "Organization",
+    "name": "Andréa Faria Marketing",
+    "url": "https://andreafariamkt.com",
+    "logo": "https://andreafariamkt.com/assets/logos/Andrea-Faria-Marketing-Purple-Logo-Back-Ground.svg",
+    "sameAs": [
+      "https://www.instagram.com/andreafaria.marketing/",
+      "https://www.linkedin.com/company/andreafariamarketing/"
+    ]
+  }
+  </script>
 </body>
 
 </html>
