--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
   <meta property="og:title" content="Andréa Faria Marketing — Branding, Marketing e Audiovisual">
   <meta property="og:description" content="Construímos marcas desejadas, estratégicas e memoráveis.">
-  <meta property="og:image" content="https://andreafariamkt.com/assets/images/andrea-faria-destaque.webp">
+  <meta property="og:image" content="https://andreafaria.marketing/assets/images/andrea-faria-destaque.webp">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://andreafariamkt.com">
+  <meta property="og:url" content="https://andreafaria.marketing">
 </head>
 
 <body>
@@ -451,8 +451,8 @@
     "@context": "https://schema.org/",
     "@type": "Organization",
     "name": "Andréa Faria Marketing",
-    "url": "https://andreafariamkt.com",
-    "logo": "https://andreafariamkt.com/assets/logos/Andrea-Faria-Marketing-Purple-Logo-Back-Ground.svg",
+    "url": "https://andreafaria.marketing",
+    "logo": "https://andreafaria.marketing/assets/logos/Andrea-Faria-Marketing-Purple-Logo-Back-Ground.svg",
     "sameAs": [
       "https://www.instagram.com/andreafaria.marketing/",
       "https://www.linkedin.com/company/andreafariamarketing/"
