modificacao no decorate

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <meta property="og:image" content="https://andreafaria.marketing/assets/images/andrea-faria-destaque.webp">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://andreafaria.marketing">
+  <meta name="format-detection" content="telephone=no">
 </head>
 
 <body>
