mexendo em alguns ajustes

--- a/index.html
+++ b/index.html
@@ -25,6 +25,20 @@
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://andreafaria.marketing">
   <meta name="format-detection" content="telephone=no">
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "Andréa Faria Marketing",
+    "url": "https://andreafaria.marketing",
+    "logo": "https://andreafaria.marketing/assets/images/logo.webp",
+    "sameAs": [
+      "https://www.instagram.com/andreafaria.marketing",
+      "https://www.linkedin.com/company/andrea-faria-marketing"
+    ]
+  }
+  </script>
 </head>
 
 <body>
@@ -476,20 +490,6 @@
   </footer>
 
   <script src="js/script.js"></script>
-
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org/",
-    "@type": "Organization",
-    "name": "Andréa Faria Marketing",
-    "url": "https://andreafaria.marketing",
-    "logo": "https://andreafaria.marketing/assets/logos/Andrea-Faria-Marketing-Purple-Logo-Back-Ground.svg",
-    "sameAs": [
-      "https://www.instagram.com/andreafaria.marketing/",
-      "https://www.linkedin.com/company/andreafariamarketing/"
-    ]
-  }
-  </script>
 </body>
 
 </html>
