--- a/index.html
+++ b/index.html
@@ -87,11 +87,7 @@
       </ul>
     </nav>
   </header>
-        
 
-        
-          LinkedIn
-        </a>
 
   <section id="hero" class="hero">
     <div class="hero-content-right mobile">
@@ -149,153 +145,141 @@
   <section id="servicos" class="servicos">
     <h2>O que fazemos</h2>
 
-    <div class="servicos-row desktop">
-      <div class="servicos-row-left">
-        <img src="./assets/images/andrea-faria-audio-visual.webp" alt="Produção audiovisual por Andréa Faria Marketing" loading="lazy">
-      </div>
-      <div class="servicos-row-right">
-        <h5>AUDIOVISUAL</h5>
-        <p>Conteúdos que elevam percepção e geram desejo.</p>
-        <a href="https://wa.me/5521972452742?text=Ol%C3%A1%2C%20Andr%C3%A9a%21%20Tenho%20interesse%20no%20servi%C3%A7o%20de%20Audiovisual.%20Gostaria%20de%20entender%20como%20podemos%20elevar%20a%20percep%C3%A7%C3%A3o%20da%20minha%20marca%20atrav%C3%A9s%20de%20conte%C3%BAdos%20visuais.%20Podemos%20conversar%3F"
-        class="btn btn-white desktop" target="_blank">Falar sobre Audiovisual</a>
-      </div>
-    </div>
+    <div class="servicos-accordion">
+      <div class="servico-item">
+        <button class="servico-header" aria-expanded="false">
+          <span>Audiovisual</span>
+          <span class="icon">+</span>
+        </button>
 
-    <div class="servicos-row desktop">
-      <div class="servicos-row-left">
-        <h5>CRIAÇÃO DE MARCA</h5>
-        <p>Identidades que diferenciam, posicionam e marcam.</p>
-        <a href="https://wa.me/5521972452742?text=Ol%C3%A1%2C%20Andr%C3%A9a%21%20Tenho%20interesse%20no%20servi%C3%A7o%20de%20Cria%C3%A7%C3%A3o%20de%20Marca.%20Gostaria%20de%20entender%20como%20podemos%20desenvolver%20uma%20identidade%20forte%2C%20desejada%20e%20estrat%C3%A9gica%20para%20o%20meu%20neg%C3%B3cio.%20Podemos%20conversar%3F"
-        class="btn btn-white desktop" target="_blank">Quero uma marca forte</a>
-      </div>
-      <div class="servicos-row-right">
-        <img src="./assets/images/andrea-faria-criacao-de-marca.webp" alt="Identidade visual desenvolvida por Andréa Faria Marketing" loading="lazy">
-      </div>
-    </div>
+        <div class="servico-content">
+          <div class="servico-content-left">
+            <p>
+              Criamos conteúdos estratégicos que elevam a percepção da sua marca, fortalecem sua autoridade e posicionam o seu negócio de forma mais profissional e atrativa no mercado.
+            </p>
+            <p>
+              Cada peça é pensada para gerar conexão emocional, despertar desejo genuíno e conduzir o público a enxergar valor real no que você oferece.
+            </p>
+            <a href="https://wa.me/5521972452742?text=Tenho%20interesse%20em%20Audiovisual"
+              class="btn btn-white" target="_blank">
+              Quero conteúdos estratégicos
+            </a>
+          </div>
 
-    <div class="servicos-row desktop">
-      <div class="servicos-row-left">
-        <img src="./assets/images/andrea-faria-web-design.webp" alt="Projeto de website criado pela Andréa Faria Marketing" loading="lazy">
+          <div class="servicos-content-right">
+            <img src="./assets/images/andrea-faria-audio-visual.webp" alt="Produção audiovisual por Andréa Faria Marketing" loading="lazy">
+          </div>
+        </div>
       </div>
-      <div class="servicos-row-right">
-        <h5>WEBSITE</h5>
-        <p>Sites que impressionam, convertem e fortalecem a presença digital.</p>
-        <a href="https://wa.me/5521972452742?text=Ol%C3%A1%2C%20Andr%C3%A9a%21%20Tenho%20interesse%20no%20servi%C3%A7o%20de%20Cria%C3%A7%C3%A3o%20de%20Website.%20Gostaria%20de%20entender%20como%20podemos%20desenvolver%20um%20site%20moderno%2C%20estrat%C3%A9gico%20e%20preparado%20para%20converter%20visitantes%20em%20clientes.%20Podemos%20conversar%3F"
-        class="btn btn-white desktop" target="_blank">Criar meu Website</a>
-      </div>
-    </div>
 
-    <div class="servicos-row desktop">
-      <div class="servicos-row-left">
-        <h5>SOCIAL MEDIA</h5>
-        <p>Estratégias que atraem, engajam e constroem autoridade.</p>
-        <a href="https://wa.me/5521972452742?text=Ol%C3%A1%2C%20Andr%C3%A9a%21%20Tenho%20interesse%20no%20servi%C3%A7o%20de%20Social%20Media.%20Gostaria%20de%20entender%20como%20podemos%20desenvolver%20uma%20estrat%C3%A9gia%20de%20conte%C3%BAdo%20que%20engaje%20meu%20p%C3%BAblico%20e%20aumente%20convers%C3%B5es%20para%20o%20meu%20neg%C3%B3cio.%20Podemos%20conversar%3F"
-        class="btn btn-white desktop" target="_blank">Quero Social Media</a>
-      </div>
-      <div class="servicos-row-right">
-        <img src="./assets/images/andrea-faria-social-media.webp" alt="Gestão de redes sociais pela Andréa Faria Marketing"  loading="lazy">
-      </div>
-    </div>
+      <div class="servico-item">
+        <button class="servico-header" aria-expanded="false">
+          <span>Criação de Marca</span>
+          <span class="icon">+</span>
+        </button>
 
-    <div class="servicos-row desktop">
-      <div class="servicos-row-left">
-        <img src="./assets/images/andrea-faria-marketing-de-performance.webp" alt="Marketing de performance realizado pela Andréa Faria Marketing" loading="lazy">
-      </div>
-      <div class="servicos-row-right">
-        <h5>MARKETING DE PERFORMANCE</h5>
-        <p>Campanhas que alcançam as pessoas certas e geram rentabilidade.</p>
-        <a href="https://wa.me/5521972452742?text=Ol%C3%A1%2C%20Andr%C3%A9a%21%20Tenho%20interesse%20no%20servi%C3%A7o%20de%20Marketing%20de%20Performance.%20Gostaria%20de%20entender%20como%20podemos%20criar%20estrat%C3%A9gias%20orientadas%20a%20dados%20para%20aumentar%20resultados%2C%20otimizar%20investimentos%20e%20acelerar%20o%20crescimento%20do%20meu%20neg%C3%B3cio.%20Podemos%20conversar%3F"
-        class="btn btn-white desktop" target="_blank">Quero Mais Performance</a>
-      </div>
-    </div>
+        <div class="servico-content">
+          <div class="servico-content-left">
+            <p>
+              Desenvolvemos identidades visuais que diferenciam sua marca no mercado, reforçam seu posicionamento e comunicam valor de forma clara e consistente.
+            </p>
+            <p>
+              Cada detalhe é pensado para criar reconhecimento, gerar confiança e deixar uma marca forte e memorável na mente do público.
+            </p>
+            <a href="https://wa.me/5521972452742?text=Ol%C3%A1%2C%20Andr%C3%A9a%21%20Tenho%20interesse%20no%20servi%C3%A7o%20de%20Audiovisual.%20Gostaria%20de%20entender%20como%20podemos%20elevar%20a%20percep%C3%A7%C3%A3o%20da%20minha%20marca%20atrav%C3%A9s%20de%20conte%C3%BAdos%20visuais.%20Podemos%20conversar%3F"
+            class="btn btn-white" target="_blank">Quero uma marca forte</a>
+          </div>
 
-    <div class="servicos-row desktop">
-      <div class="servicos-row-left">
-        <h5>CONSULTORIA DE MARKETING & NEGÓCIOS</h5>
-        <p>Direção estratégica para crescer com clareza e consistência.</p>
-        <a href="https://wa.me/5521972452742?text=Ol%C3%A1%2C%20Andr%C3%A9a%21%20Tenho%20interesse%20no%20servi%C3%A7o%20de%20Consultoria%20de%20Marketing%20%26%20Neg%C3%B3cios.%20Gostaria%20de%20entender%20como%20podemos%20analisar%20meu%20cen%C3%A1rio%20atual%2C%20identificar%20oportunidades%20e%20desenv"
-        class="btn btn-white desktop" target="_blank">Falar sobre Consultoria</a>
+          <div class="servicos-content-right">
+            <img src="./assets/images/andrea-faria-criacao-de-marca.webp" alt="Identidade visual desenvolvida por Andréa Faria Marketing" loading="lazy">
+          </div>
+        </div>
       </div>
-      <div class="servicos-row-right">
-        <img src="./assets/images/andrea-faria-consultoria.webp" alt="Consultoria estratégica de marketing e negócios por Andréa Faria Marketing" loading="lazy">
-      </div>
-    </div>
 
-    <div class="servicos-row mobile">
-      <hr>
-      <div class="servicos-row-left">
-        <h5>AUDIOVISUAL</h5>
-        <p>Conteúdos que elevam percepção e geram desejo.</p>
-        <a href="https://wa.me/5521972452742?text=Ol%C3%A1%2C%20Andr%C3%A9a%21%20Tenho%20interesse%20no%20servi%C3%A7o%20de%20Audiovisual.%20Gostaria%20de%20entender%20como%20podemos%20elevar%20a%20percep%C3%A7%C3%A3o%20da%20minha%20marca%20atrav%C3%A9s%20de%20conte%C3%BAdos%20visuais.%20Podemos%20conversar%3F"
-        class="btn btn-white mobile" target="_blank">Falar sobre Audiovisual</a>
-      </div>
-      <div class="servicos-row-right">
-        <img src="./assets/images/andrea-faria-audio-visual.webp" alt="Produção audiovisual por Andréa Faria Marketing" loading="lazy">
-      </div>
-    </div>
+      <div class="servico-item">
+        <button class="servico-header" aria-expanded="false">
+          <span>Website</span>
+          <span class="icon">+</span>
+        </button>
 
-    <div class="servicos-row mobile">
-      <hr>
-      <div class="servicos-row-left">
-        <h5>CRIAÇÃO DE MARCA</h5>
-        <p>Identidades que diferenciam, posicionam e marcam.</p>
-        <a href="https://wa.me/5521972452742?text=Ol%C3%A1%2C%20Andr%C3%A9a%21%20Tenho%20interesse%20no%20servi%C3%A7o%20de%20Cria%C3%A7%C3%A3o%20de%20Marca.%20Gostaria%20de%20entender%20como%20podemos%20desenvolver%20uma%20identidade%20forte%2C%20desejada%20e%20estrat%C3%A9gica%20para%20o%20meu%20neg%C3%B3cio.%20Podemos%20conversar%3F"
-        class="btn btn-white mobile" target="_blank">Quero uma marca forte</a>
-      </div>
-      <div class="servicos-row-right">
-        <img src="./assets/images/andrea-faria-criacao-de-marca.webp" alt="Identidade visual desenvolvida por Andréa Faria Marketing" loading="lazy">
-      </div>
-    </div>
+        <div class="servico-content">
+            <div class="servico-content-left">
+            <p>
+              Desenvolvemos websites personalizados e modernos, pensados para refletir a essência da sua marca e oferecer uma experiência visual clara, intuitiva e envolvente.
+            </p>
+            <p>  
+              Cada projeto é criado com foco em performance, usabilidade e conversão, transformando visitas em conexões reais e resultados concretos.
+            </p>
+            <a href="https://wa.me/5521972452742?text=Tenho%20interesse%20em%20Criação%20de%20Marca"
+              class="btn btn-white" target="_blank">
+              Quero um website personalizado
+            </a>
+          </div>
 
-    <div class="servicos-row mobile">
-      <hr>
-      <div class="servicos-row-left">
-        <h5>WEBSITE</h5>
-        <p>Sites que impressionam, convertem e fortalecem a presença digital.</p>
-        <a href="https://wa.me/5521972452742?text=Ol%C3%A1%2C%20Andr%C3%A9a%21%20Tenho%20interesse%20no%20servi%C3%A7o%20de%20Cria%C3%A7%C3%A3o%20de%20Website.%20Gostaria%20de%20entender%20como%20podemos%20desenvolver%20um%20site%20moderno%2C%20estrat%C3%A9gico%20e%20preparado%20para%20converter%20visitantes%20em%20clientes.%20Podemos%20conversar%3F"
-        class="btn btn-white mobile" target="_blank">Criar meu Website</a>
+          <div class="servicos-content-right">
+            <img src="./assets/images/andrea-faria-web-design.webp" alt="Projeto de website criado pela Andréa Faria Marketing" loading="lazy">
+          </div>
+        </div>
       </div>
-      <div class="servicos-row-right">
-        <img src="./assets/images/andrea-faria-web-design.webp" alt="Projeto de website criado pela Andréa Faria Marketing" loading="lazy">
-      </div>
-    </div>
 
-    <div class="servicos-row mobile">
-      <hr>
-      <div class="servicos-row-left">
-        <h5>SOCIAL MEDIA</h5>
-        <p>Estratégias que atraem, engajam e constroem autoridade.</p>
-        <a href="https://wa.me/5521972452742?text=Ol%C3%A1%2C%20Andr%C3%A9a%21%20Tenho%20interesse%20no%20servi%C3%A7o%20de%20Social%20Media.%20Gostaria%20de%20entender%20como%20podemos%20desenvolver%20uma%20estrat%C3%A9gia%20de%20conte%C3%BAdo%20que%20engaje%20meu%20p%C3%BAblico%20e%20aumente%20convers%C3%B5es%20para%20o%20meu%20neg%C3%B3cio.%20Podemos%20conversar%3F"
-        class="btn btn-white mobile" target="_blank">Quero Social Media</a>
-      </div>
-      <div class="servicos-row-right">
-        <img src="./assets/images/andrea-faria-social-media.webp" alt="Gestão de redes sociais pela Andréa Faria Marketing" loading="lazy">
-      </div>
-    </div>
+      <div class="servico-item">
+        <button class="servico-header" aria-expanded="false">
+          <span>Social Media</span>
+          <span class="icon">+</span>
+        </button>
 
-    <div class="servicos-row mobile">
-      <hr>
-      <div class="servicos-row-left">
-        <h5>MARKETING DE PERFORMANCE</h5>
-        <p>Campanhas que alcançam as pessoas certas e geram rentabilidade.</p>
-        <a href="https://wa.me/5521972452742?text=Ol%C3%A1%2C%20Andr%C3%A9a%21%20Tenho%20interesse%20no%20servi%C3%A7o%20de%20Marketing%20de%20Performance.%20Gostaria%20de%20entender%20como%20podemos%20criar%20estrat%C3%A9gias%20orientadas%20a%20dados%20para%20aumentar%20resultados%2C%20otimizar%20investimentos%20e%20acelerar%20o%20crescimento%20do%20meu%20neg%C3%B3cio.%20Podemos%20conversar%3F"
-        class="btn btn-white mobile" target="_blank">Quero Mais Performance</a>
-      </div>
-      <div class="servicos-row-right">
-        <img src="./assets/images/andrea-faria-marketing-de-performance.webp" alt="Marketing de performance realizado pela Andréa Faria Marketing" loading="lazy">
-      </div>
-    </div>
+        <div class="servico-content">
+          <div class="servico-content-left">
+            <p>Criamos estratégias que atraem o público certo, geram engajamento consistente e fortalecem a autoridade da sua marca no mercado.</p>
+            <p>Cada ação é planejada para construir relevância, confiança e presença contínua, transformando atenção em relacionamento e crescimento.</p>
+            <a href="https://wa.me/5521972452742?text=Ol%C3%A1%2C%20Andr%C3%A9a%21%20Tenho%20interesse%20no%20servi%C3%A7o%20de%20Social%20Media.%20Gostaria%20de%20entender%20como%20podemos%20desenvolver%20uma%20estrat%C3%A9gia%20de%20conte%C3%BAdo%20que%20engaje%20meu%20p%C3%BAblico%20e%20aumente%20convers%C3%B5es%20para%20o%20meu%20neg%C3%B3cio.%20Podemos%20conversar%3F"
+            class="btn btn-white" target="_blank">Quero autoridade digital</a>
+          </div>
 
-    <div class="servicos-row mobile">
-      <hr>
-      <div class="servicos-row-left">
-        <h5>CONSULTORIA DE MARKETING & NEGÓCIOS</h5>
-        <p>Direção estratégica para crescer com clareza e consistência.</p>
-        <a href="https://wa.me/5521972452742?text=Ol%C3%A1%2C%20Andr%C3%A9a%21%20Tenho%20interesse%20no%20servi%C3%A7o%20de%20Consultoria%20de%20Marketing%20%26%20Neg%C3%B3cios.%20Gostaria%20de%20entender%20como%20podemos%20analisar%20meu%20cen%C3%A1rio%20atual%2C%20identificar%20oportunidades%20e%20desenv"
-        class="btn btn-white mobile" target="_blank">Falar sobre Consultoria</a>
+          <div class="servicos-content-right">
+            <img src="./assets/images/andrea-faria-social-media.webp" alt="Gestão de redes sociais pela Andréa Faria Marketing" loading="lazy">
+          </div>
+        </div>
       </div>
-      <div class="servicos-row-right">
-        <img src="./assets/images/andrea-faria-consultoria.webp" alt="Consultoria estratégica de marketing e negócios por Andréa Faria Marketing" loading="lazy">
+
+      <div class="servico-item">
+        <button class="servico-header" aria-expanded="false">
+          <span>Marketing de Performance</span>
+          <span class="icon">+</span>
+        </button>
+
+        <div class="servico-content">
+          <div class="servico-content-left">
+            <p>Criamos campanhas que alcançam as pessoas certas no momento ideal, potencializando resultados e maximizando o retorno sobre o investimento.</p>
+            <p>Cada estratégia é orientada por dados e performance, focada em gerar rentabilidade, escala e crescimento sustentável para o seu negócio.</p>
+            <a href="https://wa.me/5521972452742?text=Ol%C3%A1%2C%20Andr%C3%A9a%21%20Tenho%20interesse%20no%20servi%C3%A7o%20de%20Marketing%20de%20Performance.%20Gostaria%20de%20entender%20como%20podemos%20criar%20estrat%C3%A9gias%20orientadas%20a%20dados%20para%20aumentar%20resultados%2C%20otimizar%20investimentos%20e%20acelerar%20o%20crescimento%20do%20meu%20neg%C3%B3cio.%20Podemos%20conversar%3F"
+            class="btn btn-white" target="_blank">Quero Mais Performance</a>
+          </div>
+
+          <div class="servicos-content-right">
+            <img src="./assets/images/andrea-faria-marketing-de-performance.webp" alt="Marketing de performance realizado pela Andréa Faria Marketing" loading="lazy">
+          </div>
+        </div>
+      </div>
+
+      <div class="servico-item">
+        <button class="servico-header" aria-expanded="false">
+          <span>Consultoria de Marketing</span>
+          <span class="icon">+</span>
+        </button>
+
+        <div class="servico-content">
+          <div class="servico-content-left">
+            <p>Oferecemos direção estratégica para que sua marca cresça com clareza, consistência e propósito em cada decisão.</p>
+            <p>Cada passo é guiado por visão, dados e posicionamento, garantindo crescimento sustentável e alinhado aos seus objetivos.</p>
+            <a href="https://wa.me/5521972452742?text=Ol%C3%A1%2C%20Andr%C3%A9a%21%20Tenho%20interesse%20no%20servi%C3%A7o%20de%20Consultoria%20de%20Marketing%20%26%20Neg%C3%B3cios.%20Gostaria%20de%20entender%20como%20podemos%20analisar%20meu%20cen%C3%A1rio%20atual%2C%20identificar%20oportunidades%20e%20desenv"
+            class="btn btn-white" target="_blank">Quero ajuda personalizada</a>
+          </div>
+
+          <div class="servicos-content-right">
+            <img src="./assets/images/andrea-faria-consultoria.webp" alt="Consultoria estratégica de marketing e negócios por Andréa Faria Marketing" loading="lazy">
+          </div>
+        </div>
       </div>
     </div>
 
