ajustes finais no site

--- a/index.html
+++ b/index.html
@@ -99,8 +99,10 @@
         <img class="hero-content-logo"
           src="./assets/icons/linkedin-in-solid-black.svg" alt="Andréa Faria Marketing - LinkedIn" aria-hidden="true" loading="lazy">
       </a>
-      <!--img class="hero-content-logo"
-        src="./assets/icons/youtube-solid-black.svg" alt="Andréa Faria Marketing - Youtube" aria-hidden="true" loading="lazy"-->
+      <a href="https://wa.me/5521972452742" target="_blank" aria-label="What's App">
+        <img class="hero-content-logo"
+          src="./assets/icons/whatsapp-solid-black.svg" alt="Andréa Faria Marketing - What's App" aria-hidden="true" loading="lazy">
+      </a>
     </div>
 
     <div class="hero-content">
@@ -124,12 +126,18 @@
           src="./assets/icons/linkedin-in-solid-black.svg" alt="Andréa Faria Marketing - Instagram" aria-hidden="true" loading="lazy">
       </a>
       
-      <!--img class="hero-content-logo"
-        src="./assets/icons/youtube-solid-black.svg" alt="Andréa Faria Marketing - Instagram" aria-hidden="true" loading="lazy"-->
+      <a href="https://wa.me/5521972452742" target="_blank" aria-label="What's App">
+        <img class="hero-content-logo"
+          src="./assets/icons/whatsapp-solid-black.svg" alt="Andréa Faria Marketing - What's App" aria-hidden="true" loading="lazy">
+      </a>    
     </div>
   </section>
 
   <section class="cta-hero">
+    <video autoplay muted loop playsinline>
+      <source src="./assets/videos/Andrea-Faria-Marketing.mov" type="video/mp4" />
+    </video>
+
     <div class="cta-hero-top">
       <h1>
         Quando a marca vale mais, <br>
@@ -288,6 +296,10 @@
         <h1>
           Trabalhamos com método, profundidade e direção estratégica.
         </h1>
+        <p>
+          Temos a solução completa para o seu negócio: criamos a sua marca, produzimos seus vídeos e fotos,
+          desenvolvemos o seu website e gerimos seus canais e campanhas de marketing com foco em performance e crescimento.
+        </p>
       </div>
 
       <div class="servicos-cta-right">
